# huber

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/: renovate.json
.github/workflows/: python-package.yml
huber/: __init__.py  driver.py  faults.csv  huber.py  mock.py  util.py
huber/tests/: test_driver.py
tests/: test_driver.py
