[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "huber"
version = "0.8.0"
description="Python driver for Huber recirculating baths."
authors = [
  {name = "Pat Fuller", email = "patrickfuller@gmail.com" },
]
maintainers = [
  {name = "Alex Ruddick", email = "alex@ruddick.tech" }
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

[project.optional-dependencies]
test = [
  "mypy==1.11.2",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ruff==0.6.9",
]

[project.scripts]
huber = "huber:command_line"

[project.urls]
Homepage = "https://github.com/alexrudd2/huber"
Issues = "https://github.com/alexrudd2/huber/issues"

[tool.setuptools]
packages = ["huber"]

[tool.setuptools.package-data]
"huber" = ["faults.csv"]

[tool.ruff]
extend-exclude = ["venv*"]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "D104",     # Missing docstring in public package
  "D107",     # Missing docstring in __init__
  "PT001",    # Use `@pytest.fixture()` over `@pytest.fixture`
  "PT023",    # Use `@pytest.mark.asyncio()` over `@pytest.mark.asyncio`
]
select = [
    # "B",   # bandit
    "C",   # complexity
    "D",   # docstrings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest
    "RUF", # ruff base config
    "SIM", # flake-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "ARG", # flake8-unused args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=huber"
